# sk_app

./: .gitignore  CMakeLists.txt  README.md  SkApp.cmake  build_android.sh  build_test.sh
android/: AndroidAPK.cmake  AndroidBuild.cmake  AndroidManifest.xml  AndroidManifest_SkApp.xml  AndroidTools.cmake  generate_empty_java.cmake
android/java/net/stereokit/sk_app/: SkAppActivity.java
android/resources/drawable/: appicon_background.xml  appicon_foreground.xml
android/resources/mipmap/: ic_launcher.xml
android/resources/values/: strings.xml  styles.xml
cmake/: copy_assets.cmake  mingw-toolchain.cmake
examples/: CMakeLists.txt
examples/imgui_example/: CMakeLists.txt  imgui_impl_sk_app.cpp  imgui_impl_sk_app.h  main.c
examples/renderer_example/: CMakeLists.txt  renderer_example.c
examples/renderer_example/assets/shaders/: default.hlsl
examples/simple_window/: CMakeLists.txt  simple_window.c
include/: sk_app.h  ska_app.h
src/: ska_android.c  ska_common.c  ska_event.c  ska_file.c  ska_input.c  ska_internal.h  ska_linux_x11.c  ska_macos.m  ska_text.c  ska_win32.c
